# first-lms-project

./: .dockerignore  .gitignore  Dockerfile  pyproject.toml  run.sh
.github/workflows/: ci.yml  deploy.yml
config/: database.py  settings.py  urls.py
config/tests/: test_settings_runtime.py
events/: exceptions.py  models.py  pagination.py  seat_patterns.py  selectors.py  serializers.py  services.py  urls.py  views.py
events/migrations/: 0001_initial.py  0002_alter_event_status.py
events/tests/: test_api.py  test_detail_api.py  test_list_api.py  test_models.py  test_seat_patterns.py  test_seats_api.py  test_services.py
health/: urls.py
health/tests/: test_health_api.py
integrations/events_provider/: __init__.py  client.py  exceptions.py  paginator.py  schemas.py
integrations/events_provider/tests/: test_client.py  test_paginator.py
sync/: exceptions.py  models.py  services.py  tasks.py  urls.py  views.py
sync/migrations/: 0001_initial.py
sync/tests/: test_api.py  test_models.py  test_run_sh.py  test_runtime.py  test_services.py  test_tasks.py
tickets/: exceptions.py  models.py  selectors.py  serializers.py  urls.py  usecases.py  views.py
tickets/migrations/: 0001_initial.py
tickets/tests/: test_api.py  test_cancel_api.py  test_models.py
