[project]
name = "first-project"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "django>=5.2.3,<5.3",
    "djangorestframework>=3.17.1,<3.18",
    "gunicorn>=23.0.0,<24",
    "psycopg2-binary>=2.9.10,<3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-django>=4.12.0",
    "ruff>=0.15.9",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"*/migrations/*.py" = ["E501", "I001"]
